[WIP] Update to jdk11.