@@ -1,9 +1,9 @@
 /*
  * -----------------------------------------------------------------------\
  * PerfCake
- *  
+ *
  * Copyright (C) 2010 - 2016 the original author or authors.
- *  
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -84,7 +84,7 @@ public class CustomProfileGenerator extends ConstantSpeedMessageGenerator {
          profileClass = "org.perfcake.message.generator.profile." + profileClass;
       }
 
-      profile = (Profile) Class.forName(profileClass).newInstance();
+      profile = (Profile) Class.forName(profileClass).getDeclaredConstructor().newInstance();
       profile.init(profileSource);
       profile.setAutoReplay(autoReplay);
 
